[package]
name = "trawler"
version = "0.12.0-alpha.1"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A workload generator that emulates the traffic to lobste.rs"
repository = "https://github.com/jonhoo/trawler.git"

keywords = ["workload-generator", "traffic"]
categories = ["web-programming", "command-line-utilities", "development-tools::profiling", "simulation", "science"]

build = "data-import.rs"

#[badges]
# travis-ci = { repository = "jonhoo/trawler" }
# maintenance = { status = "experimental" }

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
crossbeam-channel = "0.5"
futures-core = "0.3.0"
futures-util = "0.3.0"
hdrhistogram = "7"
histogram-sampler = "0.5"
libc = "0.2"
rand = "0.8.0"
rand_distr = "0.4"
slog = "2.0.6"
slog-term = "2.0.1"
time = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tower-make = "0.3"
tower-service = "0.3"
zipf = "7"

# used by the WebClient binary
clap = { version = "4", features = [ "derive", "env" ] }
cookie = { version = "0.15" }
lazy_static = { version = "1.0.0" }
regex = { version = "1.0" }
reqwest = { version = "0.12", features = [ "cookies" ] }
url = { version = "2.0" }

[build-dependencies]
glob = "0.3"

[profile.release]
debug = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "trawler"
path = "src/bin/main.rs"
